# snek

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/snek/: SNEK.py  app.py
src/snek/pages/: TAXII_and_MISP_curl.py  🧑‍🔬️_Research_Aide.py
