[project]
name = "uv"
version = "0.1.0"
description = "SNEK (Software, Networking, & Engineering Kit): a concise suite of cybersecurity, Python utilities, and DB tools for efficient workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "st-pages>=1.0.1",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.32.0",
    "watchdog>=6.0.0",
]
