[project]
name = "uv"
version = "0.1.0"
description = "SNEK (Software, Networking, & Engineering Kit): a concise suite of cybersecurity, Python utilities, and DB tools for efficient workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.18.0",
    "markdown>=3.7",
    "openai>=1.61.1",
    "pdfkit>=1.0.0",
    "python-docx>=1.1.2",
    "st-pages>=1.0.1",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.32.0",
    "watchdog>=6.0.0",
]
